deploy/k8s/base/asset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset
  labels:
    app: asset
    project: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asset
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: asset
    spec:
      nodeSelector:
        role: asset
      tolerations:
        - key: role
          value: asset
          operator: Equal
          effect: NoSchedule
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: asset
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: asset
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/ubsv:latest-arm64
          args: [ "-asset=1" ]
          ports:
            - containerPort: 8090
              protocol: TCP
            - containerPort: 8099
              protocol: TCP
            - containerPort: 8091
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            requests:
              memory: 20Gi
              cpu: "8"
            limits:
              memory: 28Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: lustre-storage
              mountPath: /data/subtreestore
            - name: scaling-tls
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: lustre-storage
          persistentVolumeClaim:
            claimName: subtree-pvc
        - name: scaling-tls
          secret:
            secretName: scaling-tls
            items:
              - key: tls.crt
                path: ubsv.crt
              - key: tls.key
                path: ubsv.key
