deploy/k8s/base/blockassembly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockassembly

  labels:
    app: blockassembly
    project: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockassembly
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        ad.datadoghq.com/blockassembly.checks: ""
      labels:
        app: blockassembly
    spec:
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: blockassembly
                topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        role: blockassembly
      tolerations:
        - key: role
          value: blockassembly
          operator: Equal
          effect: NoSchedule
      containers:
        - name: blockassembly
          image: REPO:IMAGE:TAG
          args: [ "-blockassembly=1" ]
          ports:
            - containerPort: 8055
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            requests:
              memory: 1000Gi
              cpu: "100"
            limits:
              memory: 1500Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 10
          volumeMounts:
            - name: lustre-storage
              mountPath: /data/subtreestore
            - name: scaling-tls
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: lustre-storage
          persistentVolumeClaim:
            claimName: subtree-pvc
        - name: scaling-tls
          secret:
            secretName: scaling-tls
            items:
              - key: tls.crt
                path: ubsv.crt
              - key: tls.key
                path: ubsv.key
