deploy/k8s/base/blockchain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain
  labels:
    app: blockchain
    project: service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: blockchain
  template:
    metadata:
      annotations:
        ad.datadoghq.com/blockassembly.checks: ""
      labels:
        app: blockchain
    spec:
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: blockchain
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: blockchain
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/ubsv:latest-arm64
          args: [ "-blockchain=1" ]
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 8087
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            requests:
              memory: 2Gi
              cpu: "2"
            limits:
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: scaling-tls
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: scaling-tls
          secret:
            secretName: scaling-tls
            items:
              - key: tls.crt
                path: ubsv.crt
              - key: tls.key
                path: ubsv.key
