deploy/k8s/base/blockpersister.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockpersister

  labels:
    app: blockpersister
    project: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockpersister
  template:
    metadata:
      labels:
        app: blockpersister
    spec:
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: blockpersister
                topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        role: blockpersister
      tolerations:
        - key: role
          value: blockpersister
          operator: Equal
          effect: NoSchedule
      containers:
        - name: blockpersister
          image: REPO:IMAGE:TAG
          args: [ "-blockpersister=1" ]
          # command: "You can override the entrypoint with a command."
          # command: ["./dlv", "--listen=:4040", "--continue", "--accept-multiclient", "--headless=true", "--api-version=2", "exec", "./ubsv.run", "--"]
          #          command: [ "./ubsv.run" ]
          ports:
            - containerPort: 4040
              protocol: TCP
          resources:
            requests:
              memory: 4Gi
              cpu: "2"
            limits:
              memory: 4Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: lustre-storage
              mountPath: /data/
      volumes:
        - name: lustre-storage
          persistentVolumeClaim:
            claimName: subtree-pvc
