deploy/k8s/base/p2p.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2p

  labels:
    app: p2p
    project: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2p
  template:
    metadata:
      labels:
        app: p2p
    spec:
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: p2p
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: p2p
          image: REPO:IMAGE:TAG
          args: [ "-p2p=1" ]
          # command: "You can override the entrypoint with a command."
          #          command: ["./dlv", "--listen=:4040", "--continue", "--accept-multiclient", "--headless=true", "--api-version=2", "exec", "./ubsv.run", "--"]
          #          command: [ "./ubsv.run" ]
          ports:
            - containerPort: 4040
              protocol: TCP
            - containerPort: 9905
              protocol: TCP
            - containerPort: 9906
              protocol: TCP
            - containerPort: 9901
              protocol: TCP
          resources:
            requests:
              memory: 4Gi
              cpu: "2"
            limits:
              memory: 4Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: scaling-tls
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: scaling-tls
          secret:
            secretName: scaling-tls
            items:
              - key: tls.crt
                path: ubsv.crt
              - key: tls.key
                path: ubsv.key
