deploy/k8s/base/propagation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: propagation

  labels:
    app: propagation
    project: service
spec:
  replicas: 28
  selector:
    matchLabels:
      app: propagation
  template:
    metadata:
      annotations:
        ad.datadoghq.com/propagation.checks: ""
      labels:
        app: propagation
    spec:
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: propagation
              topologyKey: "kubernetes.io/hostname"
      tolerations:
        - key: role
          value: propagation
          operator: Equal
          effect: NoSchedule
      nodeSelector:
        role: propagation
      containers:
        - name: propagation
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/ubsv:latest-arm64
          args: [ "-propagation=1" ]
          # command: "You can override the entrypoint with a command."
          #          command: ["./dlv", "--listen=:4040", "--continue", "--accept-multiclient", "--headless=true", "--api-version=2", "exec", "./ubsv.run", "--"]
          #          command: [ "./ubsv.run" ]
          ports:
            - containerPort: 4040
              protocol: TCP
            - containerPort: 8833
              protocol: TCP
            - containerPort: 8084
              protocol: TCP
            - containerPort: 8384
              protocol: UDP
          resources:
            requests:
              memory: 40Gi
              cpu: "28"
            limits:
              memory: 58Gi
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: scaling-tls
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: scaling-tls
          secret:
            secretName: scaling-tls
            items:
              - key: tls.crt
                path: ubsv.crt
              - key: tls.key
                path: ubsv.key
