deploy/k8s/base/subtreevalidation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  subtreevalidation

  labels:
    app: subtreevalidation
    project: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subtreevalidation
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        ad.datadoghq.com/subtreevalidation.checks: ""
      labels:
        app: subtreevalidation
    spec:
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: subtreevalidation
                topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        role: subtreevalidation
      tolerations:
        - key: role
          value: subtreevalidation
          operator: Equal
          effect: NoSchedule
      containers:
        - name: subtreevalidation
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/ubsv:latest-arm64
          args: [ "-subtreevalidation=1" ]
          ports:
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
            - containerPort: 8086
              protocol: TCP
          resources:
            requests:
              memory: 250Gi
              cpu: "40"
            limits:
              memory: 370Gi
          volumeMounts:
            - name: lustre-storage
              mountPath: /data/subtreestore
            - name: scaling-tls
              mountPath: /app/certs
              readOnly: true
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 9091
          #   initialDelaySeconds: 1
          #   periodSeconds: 10
          #   failureThreshold: 5
          #   timeoutSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 9091
          #   initialDelaySeconds: 1
          #   periodSeconds: 10
          #   failureThreshold: 5
          #   timeoutSeconds: 10
      volumes:
        - name: lustre-storage
          persistentVolumeClaim:
            claimName: subtree-pvc
        - name: scaling-tls
          secret:
            secretName: scaling-tls
            items:
              - key: tls.crt
                path: ubsv.crt
              - key: tls.key
                path: ubsv.key
