deploy/k8s/base/tx-blaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tx-blaster

  labels:
    app: tx-blaster
    project: service
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: tx-blaster
  template:
    metadata:
      annotations:
        ad.datadoghq.com/tx-blaster.checks: ""
      labels:
        app: tx-blaster
    spec:
      serviceAccountName: sa-t
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: tx-blaster
              topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        role: tx-blaster
      tolerations:
        - key: role
          value: tx-blaster
          operator: Equal
          effect: NoSchedule
      containers:
        - name: tx-blaster
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/ubsv:latest-arm64
          command:
            - ./blaster.run
          args: [ "-workers=10000" ]
          ports:
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            limits:
              memory: 10Gi
            requests:
              cpu: "12"
              memory: 10Gi

          readinessProbe:
            httpGet:
              path: /health
              port: 9092
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9092
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: scaling-tls
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: scaling-tls
          secret:
            secretName: scaling-tls
            items:
              - key: tls.crt
                path: ubsv.crt
              - key: tls.key
                path: ubsv.key
