deploy/k8s/base/faucet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faucet-service
  labels:
    app: faucet
  annotations:
    prometheus.io/port: "9091"
    prometheus.io/scrape: "true"
spec:
  clusterIP: None
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: faucet
  ports:
    - name: tcp
      port: 8097
      targetPort: 8097
      protocol: TCP
    - name: profiler
      port: 9091
      targetPort: 9091
      protocol: TCP
