deploy/k8s/base/p2p-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2p-service

  labels:
    app: p2p
  annotations:
    prometheus.io/port: "9091"
    prometheus.io/scrape: "true"
spec:
  clusterIP: None
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: p2p
  ports:
    - name: profiler
      port: 9091
      targetPort: 9091
      protocol: TCP
    - name: delve
      port: 4041
      targetPort: 4040
      protocol: TCP
    - name: p2p
      port: 9905
      targetPort: 9905
      protocol: TCP
    - name: p2p-http
      port: 9906
      targetPort: 9906
      protocol: TCP
