deploy/k8s/base/tx-blaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tx-blaster-service

  labels:
    app: tx-blaster
  annotations:
    prometheus.io/port: "9092"
    prometheus.io/scrape: "true"
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: tx-blaster
  ports:
    - name: tcp
      port: 8086
      targetPort: 8086
      protocol: TCP
    - name: profiler
      port: 9091
      targetPort: 9091
      protocol: TCP
    - name: tx-blaster-profiler
      port: 9092
      targetPort: 9092
      protocol: TCP
