deploy/k8s/base/coinbase-grpc-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: coinbase-ingressroute-tcp-8093
  labels:
    service: coinbase
spec:
  entryPoints:
    - coin-grpc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: coinbase-service
          port: 8093
