deploy/k8s/base/p2p-grpc-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: p2p-ingress-9905
  labels:
    service: p2p
spec:
  entryPoints:
    - p2p
  routes:
    - match: HostSNI(`*`)
      services:
        - name: p2p-service
          port: 9905
