deploy/k8s/base/p2p-wss-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: p2p-wss-ingress-9904
  labels:
    service: p2p
spec:
  entryPoints:
    - p2p-wss # Service port expecting WSS
  routes:
    - match: Host(`m.scaling.ubsv.dev`)
      kind: Rule
      services:
        - name: p2p-service
          port: 9906  # Service port expecting WS
  tls:
    secretName: scaling-tls
