deploy/k8s/base/propagation-grpc-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute-tcp-8084
  labels:
    service: propagation
spec:
  entryPoints:
    - prop-grpc
  routes:
    - match: HostSNI(`*`)
      services:
        - name: propagation-service
          port: 8084
